test/files/neg/t7757.check
t7757.scala:1: error: ';' expected but '@' found.
trait Foo @annot
          ^
one error found
